cwiczenia/Dane wyjściowe Terminala
Last login: Sat Aug 25 11:08:02 on ttys002
MacBook-Air-Ania:~ ania$ 
MacBook-Air-Ania:~ ania$ python
Python 2.7.10 (default, Jul 15 2017, 17:16:57) 
[GCC 4.2.1 Compatible Apple LLVM 9.0.0 (clang-900.0.31)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> wyniki=[10, 54, 67, 32, 78, 90]
>>> len(wyniki)
6
>>> wyniki.sort
<built-in method sort of list object at 0x10f2ca7a0>
>>> wyniki.sort()
>>> 
>>> wyniki
[10, 32, 54, 67, 78, 90]
>>> lista=[43, 54, 67, 12, 4, 10]
>>> lista2=lista
>>> lista2.sort()
>>> lista2
[4, 10, 12, 43, 54, 67]
>>> print(lista)
[4, 10, 12, 43, 54, 67]
>>> print(lista2)
[4, 10, 12, 43, 54, 67]
>>> lista.reverse()
>>> print(wyniki)
[10, 32, 54, 67, 78, 90]
>>> lista.append(199)
>>> print(lista)
[67, 54, 43, 12, 10, 4, 199]
>>> print(lista[2])
43
>>> lista.pop(2)
43
>>> print(lista)
[67, 54, 12, 10, 4, 199]
>>> lista.appednd(-1)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
AttributeError: 'list' object has no attribute 'appednd'
>>> uczestniczka={'imie' : 'Ania', 'miasto' : 'Poznan', 'ulubione_liczby' : [5 ,6, 89]}
>>> print(uczestniczka['miasto'])
Poznan
>>> uczestniczka['wiek']
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
KeyError: 'wiek'
>>> uczestniczka['ulubiony jezyk']='Python'
>>> print(uczestniczka)
{'imie': 'Ania', 'ulubiony jezyk': 'Python', 'ulubione_liczby': [5, 6, 89], 'miasto': 'Poznan'}
>>> len(uczestniczka)
4
>>> uczestniczka.pop('ulubione_liczby')
[5, 6, 89]
>>> uczestniczka
{'imie': 'Ania', 'ulubiony jezyk': 'Python', 'miasto': 'Poznan'}
>>> uczestniczka['miasto']='Bydgoszcz'
>>> uczestniczka
{'imie': 'Ania', 'ulubiony jezyk': 'Python', 'miasto': 'Bydgoszcz'}
>>> 5!=1
True
>>> 5=1
  File "<stdin>", line 1
SyntaxError: can't assign to literal
>>> 5==1
False
>>> 5>=2+2
True
>>> 5<=2+2
False
>>> a=True
>>> a
True
>>> a=1>3
>>> a
False
>>> True and True
True
>>> False and True
False
>>> True or 1==1
True
>>> 1!=2
True
>>> 1==1 and 1==2
False
>>> 1==1 and 4==4
True
>>> 
KeyboardInterrupt
>>> ^D
MacBook-Air-Ania:~ ania$ ls
Applications	Downloads	Movies		Public
Desktop		IdeaProjects	Music		cwiczenie
Documents	Library		Pictures	djangogirls
MacBook-Air-Ania:~ ania$ cd djangogirls
MacBook-Air-Ania:djangogirls ania$ cd cwiczenia
MacBook-Air-Ania:cwiczenia ania$ python3 python_intro.py
Hello, Django Girls!
MacBook-Air-Ania:cwiczenia ania$ python3 python_intro.py
  File "python_intro.py", line 2
    
           ^
SyntaxError: unexpected EOF while parsing
MacBook-Air-Ania:cwiczenia ania$ python3 python_intro.py
To dziala!
MacBook-Air-Ania:cwiczenia ania$ python3 python_intro.py
To dziala!
MacBook-Air-Ania:cwiczenia ania$ python3 python_intro.py
To dziala!
MacBook-Air-Ania:cwiczenia ania$ python3 python_intro.py
5 jest jednak większe od 2
MacBook-Air-Ania:cwiczenia ania$ python3 python_intro.py
5 jest jednak większe od 2
MacBook-Air-Ania:cwiczenia ania$ python3 python_intro.py
5 jest jednak większe od 2
Hej Sonja!
MacBook-Air-Ania:cwiczenia ania$ python3 python_intro.py
5 jest jednak większe od 2
Hej Sonja!
MacBook-Air-Ania:cwiczenia ania$ python3 python_intro.py
  File "python_intro.py", line 15
    if volume<20
               ^
SyntaxError: invalid syntax
MacBook-Air-Ania:cwiczenia ania$ python3 python_intro.py
  File "python_intro.py", line 15
    if volume<20
               ^
SyntaxError: invalid syntax
MacBook-Air-Ania:cwiczenia ania$ python3 python_intro.py
  File "python_intro.py", line 18
    print(It's nice for background music')
                                        ^
SyntaxError: invalid syntax
MacBook-Air-Ania:cwiczenia ania$ python3 python_intro.py
5 jest jednak większe od 2
Hej Sonja!
Nice for parties
MacBook-Air-Ania:cwiczenia ania$ python3 python_intro.py
5 jest jednak większe od 2
Hej Sonja!
A bit loud!
MacBook-Air-Ania:cwiczenia ania$ python3 python_intro.py
Hej!
Jak się masz?
MacBook-Air-Ania:cwiczenia ania$ python3 python_intro.py
Hej!
Jak się masz?
MacBook-Air-Ania:cwiczenia ania$ python3 python_intro.py
  File "python_intro.py", line 9
    print('Hej Ania!')
        ^
IndentationError: expected an indented block
MacBook-Air-Ania:cwiczenia ania$ python3 python_intro.py
  File "python_intro.py", line 9
    print('Hej Ania!')
        ^
IndentationError: expected an indented block
MacBook-Air-Ania:cwiczenia ania$ python3 python_intro.py
  File "python_intro.py", line 9
    print('Hej Ania!')
        ^
IndentationError: expected an indented block
MacBook-Air-Ania:cwiczenia ania$ python3 python_intro.py
  File "python_intro.py", line 9
    print('Hej Ania!')
        ^
IndentationError: expected an indented block
MacBook-Air-Ania:cwiczenia ania$ python3 python_intro.py
  File "python_intro.py", line 9
    print('Hej Ania')
        ^
IndentationError: expected an indented block
MacBook-Air-Ania:cwiczenia ania$ python3 python_intro.py
  File "python_intro.py", line 9
    print ('Hej Ania')
        ^
IndentationError: expected an indented block
MacBook-Air-Ania:cwiczenia ania$ python3 python_intro.py
Hej!
Jak się masz?
MacBook-Air-Ania:cwiczenia ania$ python3 python_intro.py
Hej Ania
MacBook-Air-Ania:cwiczenia ania$ python3 python_intro.py
Hej nieznajoma
MacBook-Air-Ania:cwiczenia ania$ python3 python_intro.py
HejAnia!
MacBook-Air-Ania:cwiczenia ania$ python3 python_intro.py
Hej Ania!
MacBook-Air-Ania:cwiczenia ania$ python3 python_intro.py
Hej Ania!
Kolejna dziewczyna
Hej Iza!
Kolejna dziewczyna
Hej Kasia!
Kolejna dziewczyna
Hej Phoebe!
Kolejna dziewczyna
MacBook-Air-Ania:cwiczenia ania$ python3 python_intro.py
Hej Ania!
Kolejna dziewczyna
Hej Iza!
Kolejna dziewczyna
Hej Kasia!
Kolejna dziewczyna
Hej Phoebe!
Kolejna dziewczyna
1
2
3
4
5
6
7
MacBook-Air-Ania:cwiczenia ania$ exit()
> cd djangogirls
-bash: syntax error near unexpected token `cd'
MacBook-Air-Ania:cwiczenia ania$ cd ..
MacBook-Air-Ania:djangogirls ania$ myvenv/bin/activate
-bash: myvenv/bin/activate: Permission denied
MacBook-Air-Ania:djangogirls ania$ cd .. 
MacBook-Air-Ania:~ ania$ myvenv/bin/activate
-bash: myvenv/bin/activate: No such file or directory
MacBook-Air-Ania:~ ania$ cd djangogirls
MacBook-Air-Ania:djangogirls ania$ myvenv/bin/activate
-bash: myvenv/bin/activate: Permission denied
MacBook-Air-Ania:djangogirls ania$ source myvenv/bin/activate
(myvenv) MacBook-Air-Ania:djangogirls ania$ python manage.py runserver
Performing system checks...

System check identified no issues (0 silenced).
August 25, 2018 - 16:39:40
Django version 2.0.8, using settings 'mysite.settings'
Starting development server at http://127.0.0.1:8000/
Quit the server with CONTROL-C.
[25/Aug/2018 16:39:53] "GET /admin/ HTTP/1.1" 302 0
[25/Aug/2018 16:39:53] "GET /admin/login/?next=/admin/ HTTP/1.1" 200 1858
[25/Aug/2018 16:39:53] "GET /static/admin/css/base.css HTTP/1.1" 200 16106
[25/Aug/2018 16:39:53] "GET /static/admin/css/login.css HTTP/1.1" 200 1203
[25/Aug/2018 16:39:53] "GET /static/admin/css/responsive.css HTTP/1.1" 200 17894
[25/Aug/2018 16:39:53] "GET /static/admin/css/fonts.css HTTP/1.1" 304 0
[25/Aug/2018 16:39:53] "GET /static/admin/fonts/Roboto-Regular-webfont.woff HTTP/1.1" 304 0
[25/Aug/2018 16:39:53] "GET /static/admin/fonts/Roboto-Light-webfont.woff HTTP/1.1" 304 0
python manage.py createsuperuser
(myvenv) ~/djangogirls$ python manage.py createsuperuser
^C(myvenv) MacBook-Air-Ania:djangogirls ania$ python manage.py createsuperuser
-bash: /: is a directory
(myvenv) MacBook-Air-Ania:djangogirls ania$ python manage.py createsuperuser
Username (leave blank to use 'ania'): admin
Email address: 
